# sct

./: CMakeLists.txt  NOTICE  README.md  index.html  params.json
doc/: aps.md  brksph2pdb.md  brktos.md  calculate_curve.md  calculate_rfactor.md  contents.md  frcc.md  get_boxside.md  hydrate_spheres.md  hypro.md  optimize_model_parameters.md  pdb2sphere.md  rfacxn.md  sas_curve_analysis.md  sct.md  sct_get_sequence.md  sctpl.md  sluv.md  sluv2.md  sluv_in.yml  sluv_input_template  sphere2pdb.md  sphere_rg.md  template.md
doc/src/: aps.md  brksph2pdb.md  calculate_curve.md  calculate_rfactor.md  contents.md  create_html.sh  get_boxside.md  hydrate_spheres.md  sas_curve_analysis.md  sct.md  sct_get_sequence.md  sct_pdb_analysis.md  (+3 more)
markdown/: footer.html  index.md  install.md  references.bib  sct-parameters.md  tutorial.md
modern-tutorial/: migg4.fas  params.yml  tutorial.md
python/: CMakeLists.txt  setup.py.in
python/sct/: __init__.py  curve.py  param.py  pdb.py  seq.py  six.py  sphere.py  tasks.py
python/share/: aa_volumes.yml
python/tests/: test_pdb.py  test_seq.py  tmp.fasta  tmp.yml
script-doc/: aps.html  brksph2pdb.html  brktos.html  calculate_curve.html  calculate_rfactor.html  frcc.html  get_boxside.html  hydrate_spheres.html  hypro.html  index.html  optimize_model_parameters.html  pdb2sphere.html  rfacxn.html  sas_curve_analysis.html  sct.html  sct_get_sequence.html  sct_pdb_analysis.html  sctpl.html  sluv.html  sluv2.html  sphere2pdb.html  sphere_rg.html  template.html
sct/: __init__.py  pdb.py  seq.py  sphere.py
share/: aa_volumes.yml  do_curve.sh  sluv_parameters.yml  sphere_modelling_parameters.yml  template_sas_graph.yml
src/: CMakeLists.txt  SCTPL.COM  aps.f90  axtrans.f  brksph2pdb.f90  brktos.f90  consgt.f  datype.f  decide.f  errmsg.f  fitq.f  frcc.f90  getfile.f  getfval.f  getmodel.f  grinit.f  guinlab.f  hypro.f90  init.f  linegt.f  linfit.f  lotus.f  opnfil.f  plotone.f  plotq.f  plots.f  prtscr.f  pstyle.f  ptypget.f  qcnvt.f  rfacXN2.f90  rfacauto.f  rfctxt.f  sct.f90  sctpl.f  setaxes.f  sjp_util.f90  sluv.f90  smear.f  symbgt.f  (+5 more)
tech-doc/: api-objects.txt  help.html  identifier-index.html  index.html  module-tree.html  redirect.html  sct-module.html  sct-pysrc.html  sct.curve-module.html  sct.curve-pysrc.html  sct.param-module.html  sct.param-pysrc.html  sct.pdb-module.html  sct.pdb-pysrc.html  sct.seq-module.html  sct.seq-pysrc.html  sct.sphere-module.html  sct.sphere-pysrc.html  sct.tasks-module.html  sct.tasks-pysrc.html  toc-everything.html  toc-sct-module.html  toc-sct.curve-module.html  toc-sct.param-module.html  toc-sct.pdb-module.html  toc-sct.seq-module.html  toc-sct.sphere-module.html  toc-sct.tasks-module.html  toc.html
tutorials/: modern-workflow.html  sct-install.html  sct-parameters.html  sct-tutorial.tgz
